add mobile responsive from header

--- a/src/app/desktop/header/header.component.html
+++ b/src/app/desktop/header/header.component.html
@@ -5,6 +5,7 @@
         <div class="header-left">
             <figure>
                 <img src="img/header/person.png" alt="person">
+                <img src="img/header/person_mobile.png" alt="person_mobile">
                 <div class="left-img-bg"></div>
                 <div class="left-img-bg-hover"></div>
             </figure>
