add mobile responsive from main section why me

--- a/src/app/desktop/main/why-me/why-me.component.html
+++ b/src/app/desktop/main/why-me/why-me.component.html
@@ -10,6 +10,7 @@
             <!-- >> Left Contaienr -->
             <figure class="c-left">
                 <img src="img/main/icons/position.svg" alt="position">
+                <img src="img/main/icons/position_mobile.svg" alt="position_mobile">
                 <figcaption>
                     <span>
                         <span>{{ this.app.left_container.first_text }}</span>
