add mobile responsive from main section my skills

--- a/src/app/desktop/main/main.component.html
+++ b/src/app/desktop/main/main.component.html
@@ -1,7 +1,9 @@
 <section>
     <main>
-        <app-why-me id="navWhy" />
-        <app-my-skills id="navSkills" />
+        <section>
+            <app-why-me id="navWhy" />
+            <app-my-skills id="navSkills" />
+        </section>
         <app-my-projects id="navProjects" />
         <app-need-a-teamplayer />
         <app-contact-me id="navContact" />
