--- a/src/app/desktop/main/my-skills/my-skills.component.html
+++ b/src/app/desktop/main/my-skills/my-skills.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="whyMe">
+    <div class="mySkills">
 
         <!-- >> Headline Container -->
         <div class="headline">
