--- a/src/app/desktop/main/main.component.scss
+++ b/src/app/desktop/main/main.component.scss
@@ -5,3 +5,15 @@ main {
 
     @include flex($fd: column, $g: 80px);
 }
+
+// >> Mobile Response
+@media (max-width: 1440px) {
+    main {
+        >section {
+            position: relative;
+            padding-bottom: 64px;
+            
+            @include flex($fd: column, $g: 80px);
+        }
+    }
+}
