--- a/src/app/desktop/main/my-projects/my-projects.component.html
+++ b/src/app/desktop/main/my-projects/my-projects.component.html
@@ -14,6 +14,7 @@
                         (click)="this.setNextProject(index)">
                         <button type="button">
                             <span>{{ item.title }}</span>
+                            <span class="c-nav-mobile">{{ index + 1 }} Project</span>
                         </button>
                     </li>
                     }
@@ -46,19 +47,34 @@
                     <!-- >> Main Right Container -->
                     <div class="c-main-right">
 
-                        <!-- >> Main Right Top Container -->
-                        <figure class="c-main-right-top">
-                            <div>
-                                @for (item of app.projects[currentProject].right_container.images;
-                                track item) {
-                                <img src="{{ item.path }}" alt="{{ item.title }}">
-                                }
-                            </div>
-                            <figcaption>
-                                <span>{{ this.app.right_headline
-                                    }}</span>
-                            </figcaption>
-                        </figure>
+                        <!-- >> Main Right Top Container /> Mobile -->
+                        <div class="c-main-mobile-top">
+                            <span class="c-main-mobile-proj-title">{{ app.projects[this.currentProject].title }}</span>
+                            
+                            <figure class="c-main-right-top">
+                                <div>
+                                    @for (item of app.projects[currentProject].right_container.images;
+                                    track item; let i = $index;) {
+                                    <img src="{{ item.path }}" alt="{{ item.title }}">
+                                    <span> {{ item.title }}</span>
+
+                                    @if($index < app.projects[currentProject].right_container.images.length -1) { <span
+                                        class="mobile-symbol">,</span>
+                                        }
+                                        }
+                                </div>
+                                <figcaption>
+                                    <span>{{ this.app.right_headline }}</span>
+                                    <span class="mobile-symbol">:</span>
+                                </figcaption>
+                            </figure>
+
+                            @for (item of app.projects[currentProject].description; track item) {
+                            @if (item.weeks.length >= 1) {
+                            <span>{{ item.weeks }}</span>
+                            }
+                            }
+                        </div>
 
                         <!-- >> Main Right Bottom Container -->
                         <figure class="c-main-right-bottom">
@@ -72,7 +88,7 @@
                             }
 
                             <!-- >> Buttons: Live Test / Github -->
-                            <figcaption>
+                            <figcaption class="c-main-btn">
                                 @if (app.projects[currentProject].right_container.button_status) {
                                 @for (item of app.projects[currentProject].right_container.buttons;
                                 track item) {
