--- a/src/app/desktop/footer/footer.component.html
+++ b/src/app/desktop/footer/footer.component.html
@@ -14,18 +14,21 @@
         <!-- >> Right Container Icon Bar -->
         <div class="c-right-icon-bar">
             <figure class="right-icon-bar-item">
+                <img class="mobile-img" src="img/logos/footer/email_logo_mobile.svg" alt="email_logo_mobile">
                 <img src="img/logos/footer/email_logo.svg" alt="email_logo">
                 <a href="#navContact" (click)="this.setActiveMenuItem('menuItem3')">
                     <img src="img/logos/footer/email_logo_hover.svg" alt="email_logo_hover">
                 </a>
             </figure>
             <figure class="right-icon-bar-item">
+                <img class="mobile-img" src="img/logos/footer/github_logo_mobile.svg" alt="github_logo_mobile">
                 <img src="img/logos/footer/github_logo.svg" alt="github_logo">
                 <a href="https://github.com/dhm-blue-phoenix/portfolio.git" target="_blank" rel="noopener noreferrer">
                     <img src="img/logos/footer/github_logo_hover.svg" alt="github_logo_hover">
                 </a>
             </figure>
             <figure class="right-icon-bar-item">
+                <img class="mobile-img" src="img/logos/footer/linkedin_logo_mobile.svg" alt="linkedin_logo_mobile">
                 <img src="img/logos/footer/linkedin_logo.svg" alt="linkedin_logo">
                 <!-- No Link Ref -->
                 <a href="#">
