--- a/src/app/response/mobile/footer.scss
+++ b/src/app/response/mobile/footer.scss
@@ -2,4 +2,75 @@
 @use '../../../styles/global-fonts' as *;
 @use '../../../styles/globle-mixin' as *;
 
-@media (max-width: 1440px) {}
+@media (max-width: 1440px) {
+    section {
+        user-select: none;
+        width: 100%;
+        height: 243px;
+        background-color: $main-color-lightblue;
+
+        @include flex();
+    }
+
+    footer {
+        position: relative;
+        width: 300px;
+        height: 100%;
+        padding-top: 66px;
+
+        display: flex;
+        justify-content: center;
+        flex-direction: column-reverse;
+
+        >figure {
+            position: absolute;
+            top: 38px;
+            width: 100%;
+
+            @include flex();
+
+            >img {
+
+                @include img($w: 66px, $h: 72px);
+            }
+        }
+    }
+
+    // >> Left Container
+    .c-left {
+
+        @include flex($jc: space-between);
+        @include font($c: $main-color-lightblack, $ff: 'Josefin Sans', $fw: 400, $fs: 14px);
+
+        >a {
+            color: $main-color-lightblack;
+
+            &:hover {
+                color: $main-color-white;
+            }
+        }
+    }
+
+    // >> Right Container
+    .c-right-icon-bar {
+        height: 72px;
+
+        @include flex($g: 32px);
+    }
+
+    .right-icon-bar-item {
+        >img {
+            display: none;
+
+            @include img($w: 30px, $h: 30px);
+        }
+
+        >a {
+            display: none;
+        }
+    }
+
+    .mobile-img {
+        display: block !important;
+    }
+}
